# CodeOptimization

./: CMakeLists.txt  FORMATO_resultados.txt  P2  P2_OPT_NEW  P2_OPT_OLD  P2_OPT_new  P2_SIN_OPT  README.md  cuantiles.R  main.c  makefile  opt_new.c  opt_old.c  plot.R  resultados.txt  resultados_pocos.txt  run_all.sh  script.R  sin_opt.c  test_opt_new.c  test_opt_old.c  test_sin_opt.c
Informe/: P12.aux  P12.bbl  P12.bcf  P12.blg  P12.out  P12.run.xml  P12.tex  P12.toc  ShifProduct.tex  references.bib
Informe/_minted/: _E92C142C0618E235635C86AE0D73AB56.index.minted
Matrices/: P1_Os  README.md  code.c  makefile  run_all.sh
Matrices/ensamblador/: O0.s  O1.s  O2.s  O3.s  Os.s
Matrices/informe/: matrices.aux  matrices.bbl  matrices.bcf  matrices.blg  matrices.out  matrices.run.xml  matrices.tex  matrices.toc  references.bib
Peeling/: .Rhistory  P2_OPT  P2_SIN_OPT  README.md  makefile  run_all.sh  test_opt.c  test_sin_opt.c
ShiftProduct/: README.md  test_opt.c  test_sin_opt.c
Suavizado/: README.md  code.c  entrada.pgm  generar_combinaciones.py
documents/: .~lock.Optimizacion_bitwise.docx#  .~lock.Resumen_Bitwise_Optimización.docx#  .~lock.desplazamientos_vs_multiplicaciones.docx#  desplazamientos_vs_multiplicaciones.docx  notas_EXTRA.txt
ensamblador/: opt_new.s  opt_old.s  sin_opt.s
experimento basico/: arit_con_potencias.c  arit_sin_potencias.c  desp.c  makefile
experimento reducido/: run_all.sh
resultados/: DIA_OPT_OLD.txt  DIA_SIN_OPT.txt  NOCHE_OPT_OLD.txt  res_OPT_OLD.txt  res_SIN_OPT.txt
scripts/: plot.R  plot_DIA.R  plot_NOCHE.R
(+178 files in other folders)
